added adress change, registering in collection

--- a/cheaper-ui/src/components/profile-page/styles.sass
+++ b/cheaper-ui/src/components/profile-page/styles.sass
@@ -1,2 +1,12 @@
 .tc-profile-page
     margin-top: 80px
+
+.tc-profile-welcome
+    margin-bottom: 40px
+
+.tc-adress
+    .ant-form-item-control-input-content
+        display: flex
+        input
+            width: 300px
+            margin-right: 40px
