added close/cancel in manager

--- a/manager-ui/src/renderer/product-pages/style.sass
+++ b/manager-ui/src/renderer/product-pages/style.sass
@@ -3,3 +3,13 @@
     margin-bottom: 16px
     &:hover
         cursor: pointer
+
+.tc-product-card-full
+    border: 1px solid #bfff00
+
+.tc-product-card-disabled
+    opacity: 0.5
+
+.tc-product-card-canceled
+    opacity: 0.5
+    border: 1px solid #eb4d55
